--- a/TeacherApp/templates/attendancepercentage.html
+++ b/TeacherApp/templates/attendancepercentage.html
@@ -70,7 +70,7 @@
             </tr>
             {% empty %}
             <tr>
-                <td colspan="5" class="text-center text-muted">
+                <td colspan="5" class="text-center">
                     No Attendance Records Available
                 </td>
             </tr>
