commit 172 (edit button from display page removed)

--- a/TeacherApp/templates/Chatbot.html
+++ b/TeacherApp/templates/Chatbot.html
@@ -15,7 +15,7 @@
 
 <div class="messenger-wrapper">
 
-<!--    Left Side Student Lis -->
+<!--    Left Side Student List -->
     <div class="chat-list">
 
         <div class="chat-list-header">
