--- a/TeacherApp/templates/index.html
+++ b/TeacherApp/templates/index.html
@@ -414,7 +414,7 @@
                     <div class="card quick-access-card">
                         <div class="card-body text-center">
                             <div class="p-4 rounded-full bg-warning-100 text-warning-500 inline-block mb-3">
-                                <i data-feather="book-open" class="w-8 h-8"></i>
+                                <i data-feather="bar-chart-2"i data-feather="book-open" class="w-8 h-8"></i>
                             </div>
                             <h5 class="font-semibold mb-2">View Internal</h5>
                             <p class="text-muted text-sm">Browse all Internals per subject</p>
