commit 195 (quick access -missing internal )

--- a/TeacherApp/templates/index.html
+++ b/TeacherApp/templates/index.html
@@ -396,7 +396,7 @@
 
 
             <div class="col-span-12 xl:col-span-3 md:col-span-6">
-                <a href="{% url 'AddsubjectPage' %}">
+                <a href="{% url 'Addinternalpage' %}">
                     <div class="card quick-access-card">
                         <div class="card-body text-center">
                             <div class="p-4 rounded-full bg-success-100 text-success-500 inline-block mb-3">
