commit 196 (quick access -missing internal )

--- a/TeacherApp/templates/index.html
+++ b/TeacherApp/templates/index.html
@@ -410,7 +410,7 @@
             </div>
 
             <div class="col-span-12 xl:col-span-3 md:col-span-6">
-                <a href="{% url 'DisplaysubjectPage' %}">
+                <a href="{% url 'Displayinternal' %}">
                     <div class="card quick-access-card">
                         <div class="card-body text-center">
                             <div class="p-4 rounded-full bg-warning-100 text-warning-500 inline-block mb-3">
