commit 302(attendance added)

--- a/TeacherApp/templates/addsubject.html
+++ b/TeacherApp/templates/addsubject.html
@@ -20,7 +20,7 @@
 
             <div class="mb-3">
                 <label class="form-label">Subject Code</label>
-                <input type="text" name="subject_code" placeholder="Ex: CS401" class="form-control"
+                <input type="text" name="subject_code" placeholder="Eg: CS401" class="form-control"
                        onkeyup="Validatesubcode()">
                 <small class="text-danger" id="err_subcode"></small>
 
