--- a/TeacherApp/templates/editsubject.html
+++ b/TeacherApp/templates/editsubject.html
@@ -21,7 +21,7 @@
 
             <div class="mb-3">
                 <label class="form-label">Subject Code</label>
-                <input type="text" name="subject_code" placeholder="Ex: CS401" class="form-control"
+                <input type="text" name="subject_code" placeholder="Eg: CS401" class="form-control"
                        value="{{subject.Subject_code}}" onkeyup="Validatesubcode()">
                 <small class="text-danger" id="err_subcode"></small>
 
